<resources>
    <string name="app_name">StackIt</string>

    <!--Auth screens-->
    <string name="create_account">Create account</string>"
    <string name="already_have_an_account">Already have an account? Log In</string>
    <string name="email_placeholder">example@gmail.com</string>
    <string name="password_placeholder">Password</string>
    <string name="username_placeholder">Username</string>

    <string name="login_button">Log In</string>
    <string name="register_button">Register</string>

    <!--Home screen-->
    <string name="collections">Collections</string>
    <string name="help_logout">logout</string>

    <!--Collection detail screen-->
    <string name="collection_name_placeholder">Collection name</string>
    <string name="collection_description_placeholder">Description…</string>
    <string name="help_see_statistics">See statistics</string>
    <string name="help_share">Share collection</string>
    <string name="collection_owner_placeholder">Owner</string>
    <string name="collection_members_placeholder">Membres: 1</string>

    <string name="item_name_placeholder">Item name</string>

    <!--Statistics screen-->
    <string name="statistics">Statistics</string>

    <!--General-->
    <string name="session_expired">Error: Session expired. Login</string>

    <!--statistics table-->
    <string name="item_name">Item name</string>
    <string name="item_counts">Item counts</string>
    <string name="main_contributor">Main contributor</string>
    <string name="my_count">My count</string>
    <string name="not_items_to_show">There are no items in this collection to show statistics.</string>
    <string name="row_item_name">item name</string>
    <string name="row_item_count">0</string>
    <string name="row_item_main_contributor">user (count)</string>
    <string name="row_item_my_count">0</string>
    <string name="add_new_item">Add new item</string>
    <string name="name_of_the_new_item">Name of the new item</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="add_new_collection">Add new collection</string>
    <string name="name_of_the_collection">Name of the collection</string>
    <string name="description_of_the_collection_optional">Description of the collection (optional)</string>
    <string name="create">Create</string>
    <string name="e_mail_of_the_user_to_add">E-Mail of the user to add</string>
    <string name="share_collection">Share collection</string>
    <string name="share">Share</string>
    <string name="subtract_count">-</string>
    <string name="add_count">+</string>
    <string name="delete_confirmation">Delete confirmation</string>
    <string name="item_delete_confirmation">Delete item</string>
    <string name="collection_delete_confirmation">Delete confirmation</string>
    <string name="delete_confirmation_message">Are you sure you want to delete the </string>
    <string name="owner_collection_delete_description">This will delete ALL its items and unlink it from ALL users who have access to it.</string>
</resources>