<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:background="?attr/colorSurface"> <!-- Fons de la fila, s'adaptarà al tema -->

    <TextView
        android:id="@+id/itemNameStatTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/row_item_name"
        android:textColor="?attr/colorOnSurface"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/itemCountsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/row_item_count"
        android:textColor="?attr/colorOnSurface"
        android:textSize="14sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/mainContributorTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/row_item_main_contributor"
        style="@style/TextAppearance.App.Body"
        android:gravity="center"/>

    <TextView
        android:id="@+id/myCountTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:text="@string/row_item_my_count"
        android:textColor="?attr/colorOnSurface"
        android:textSize="14sp"
        android:gravity="center"/>

</LinearLayout>
