<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="?attr/colorPrimary"> <!-- Fons de diàleg que s'adapta al tema -->

    <TextView
        android:id="@+id/dialogTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        style="@style/TextAppearance.App.H1"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:textColor="?attr/colorOnSurface"/>

    <TextView
        android:id="@+id/dialogMessageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_confirmation"
        style="@style/TextAppearance.App.Body"
        android:layout_marginBottom="24dp"
        android:textColor="?attr/colorOnSurface"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/cancelButton"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="?attr/colorOnPrimary" />

        <Button
            android:id="@+id/confirmButton"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:backgroundTint="?attr/colorSecondary"
            android:textColor="?attr/colorOnSecondary"
        android:layout_marginStart="8dp" />

    </LinearLayout>

</LinearLayout>
