<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@android:color/transparent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="?attr/colorPrimary"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/collectionNameTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.App.Body"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:text="@string/collection_name_placeholder"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/collectionOwnerTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.App.Caption"
                    android:text="@string/collection_owner_placeholder"
                    android:visibility="gone"
                    android:textColor="?attr/colorOnPrimary"/>
            </LinearLayout>

            <TextView
                android:id="@+id/collectionDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="14sp"
                android:text="@string/collection_description_placeholder"
                android:textColor="?attr/colorOnPrimary" />

            <TextView
                android:id="@+id/collectionMembersCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                style="@style/TextAppearance.App.Caption"
                android:textSize="12sp"
                android:text="@string/collection_members_placeholder"
                android:textColor="?attr/colorOnPrimary" />

        </LinearLayout>
        <ImageButton
            android:id="@+id/deleteCollectionButton"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:background="?attr/colorSecondary"
            android:src="@android:drawable/ic_delete"
            android:visibility="visible"
            android:layout_weight="1"
            app:tint="?attr/colorOnSecondary" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
